[package]
name = "include_json"
version = "0.0.0"
edition = "2021"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
macro-string = "0.1"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
minijinja = "2.7"
rustversion = "1.0.19"
trybuild = { version = "1.0.103", features = ["diff"] }
