[package]
name = "include_json"
version = "0.1.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Parse JSON file at compile time and embed as serde_json::Value"
documentation = "https://docs.rs/include_json"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/include-json"
rust-version = "1.71"

[lib]
proc-macro = true

[dependencies]
macro-string = "0.2"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
minijinja = "2.7"
rustversion = "1.0.19"
trybuild = { version = "1.0.108", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
